charts/prometheus/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
  annotations:
    konghq.com/strip-path: "true"
    konghq.com/protocols: "https,http"
spec:
  ingressClassName: kong
  tls:
  - hosts:
    - ocloud-bmwlab.duckdns.org
    secretName: ocloud-bmwlab.duckdns.org
  rules:
  - host: ocloud-bmwlab.duckdns.org
    http:
      paths:
      - path: /prometheus
        pathType: Prefix
        backend:
          service:
            name: prometheus-kube-prometheus-prometheus
            port:
              number: 9090
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    konghq.com/protocols: "https,http"
spec:
  ingressClassName: kong
  tls:
  - hosts:
    - ocloud-bmwlab.duckdns.org
    secretName: ocloud-bmwlab-tls
  rules:
  - host: ocloud-bmwlab.duckdns.org
    http:
      paths:
      - path: /grafana
        pathType: Prefix
        backend:
          service:
            name: prometheus-grafana
            port:
              number: 80
